# ffmpeg_learn

./: .gitignore  CMakeLists.txt  README.md  main.cpp  version-RFB-320-sim.onnx
capi/: video_push_api.cpp  video_push_api.h
src/: HWDecodePlayer.cpp  HWDecodePlayer.h  PushOpenCVRtsp.cpp  PushOpenCVRtsp.h  VideoAnalysis.cpp  VideoAnalysis.h  ai_utils.cpp  ai_utils.h  hw_decode_show_in_opencv.cpp  hw_decode_show_in_opencv.h  log.cpp  log.h  push_opencv_rtsp.cpp  push_opencv_rtsp.h  read_file_show_in_opencv.cpp  read_file_show_in_opencv.h  video_analysis.cpp  video_analysis.h  video_decode_play.cpp  video_decode_play.h
test/: CMakeLists.txt  test_utils.cpp
